<resources>
    <string name="app_name">Final project</string>
    <string name="postpone">Postpone</string>
    <string name="complete">Complete</string>
    <string name="noteTitle">Note title</string>
    <string name="noteDescription">Description</string>
    <string name="dueDatePicker">Due date mm/dd/yyyy</string>
    <string name="datePickerReminder">Reminder date</string>
    <string name="crear">Create</string>
    <string name="media">Submit file</string>
    <string name="cancelar">Cancel</string>
    <string name="add_note">Add note</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edite">Edit</string>
    <string name="creation_date">Creation date:</string>
    <string name="title_activity_add_note">Add note</string>
    <string name="due_date">Due date:</string>
    <string name="delete">Delete</string>
    <string name="is_a_task">Is it a task?</string>
    <string name="title">Title:</string>
    <string name="home">Home</string>
    <string name="notes">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="notications">Notications</string>
    <string name="reminder_date_mm_dd_yy">Reminder date mm/dd/yy</string>
    <string name="add_reminder">Add reminder</string>
    <string name="add_photo">Add photo</string>
    <string name="add_audio">Add audio</string>
    <string name="title_activity_details">DetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="channel_name">NOTES_S19120121_CHANNEL</string>
    <string name="channel_desc">Channel for alarm manager</string>
    <string name="notificationDescForTask">There is something waiting for you. Touch here to see what happen.</string>
    <string name="notificationTitleForTask">A task is waiting</string>
    <string name="add_video">Add video</string>
    <string name="edit_media">Edit media</string>
    <string name="delete_media">Delete media</string>
    <string name="notificationTitleForDueDate">Due date has arrive</string>
    <string name="camera">Camera</string>
    <string name="files">Files</string>
    <string name="speaker">Speaker</string>
    <string name="set_up_due_date">Set up due date</string>
</resources>